k8s/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-client
  namespace: portfolio
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: portfolio-client
