k8s/client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-client-ingress
  namespace: portfolio
spec:
  ingressClassName: ingress-nginx
  rules:
    - host: portfolio.your-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-client
                port:
                  number: 80
